<resources>
    <string name="app_name">XerviceusPersonel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open_orders">Open Orders</string>
    <string name="closed_orders">Closed Orders</string>
    <string name="login">Login</string>
    <string name="enter_email_mobile">Enter Email ID or Mobile Number to login into your account</string>
    <string name="email_mobile">Email ID / Mobile No</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password</string>
</resources>
