<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/xlogo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.hss.xpersonel.utils.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textlarge"
                    android:textStyle="bold" />

                <com.hss.xpersonel.utils.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/textsmall"
                    android:paddingRight="20dp"
                    android:text="@string/enter_email_mobile"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_weight="0.3"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:background="@color/dark_gray"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/ic_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <com.hss.xpersonel.utils.CustomFontEditText
                            android:layout_width="match_parent"
                            android:background="@drawable/edittext_background"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:id="@+id/edt_email"
                            android:hint="@string/email_mobile"
                            android:layout_height="45dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_weight="0.3"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:background="@color/dark_gray"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/ic_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <com.hss.xpersonel.utils.CustomFontEditText
                            android:layout_width="match_parent"
                            android:background="@drawable/edittext_background"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:id="@+id/edt_password"
                            android:hint="@string/password"
                            android:layout_height="45dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:text="@string/remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:gravity="right"
                        android:layout_height="wrap_content">
                        <com.hss.xpersonel.utils.CustomFontTextView
                            android:text="@string/forgot_pass"
                            android:textColor="@color/design_default_color_primary"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_forgotPassword"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

                <com.hss.xpersonel.utils.CustomFontButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/colorAccent"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textmed"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>